[gd_scene load_steps=4 format=2]

[ext_resource path="res://code/ui_elements/timeline.gd" type="Script" id=1]
[ext_resource path="res://code/time_manager.gd" type="Script" id=2]

[sub_resource type="ButtonGroup" id=1]

[node name="Timeline" type="HBoxContainer"]
process_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 1660.0
offset_bottom = 44.0
script = ExtResource( 1 )

[node name="BtnToStart" type="CheckBox" parent="."]
offset_right = 24.0
offset_bottom = 34.0
group = SubResource( 1 )

[node name="BtnInverse" type="CheckBox" parent="."]
offset_left = 28.0
offset_right = 52.0
offset_bottom = 34.0
group = SubResource( 1 )

[node name="BtnStop" type="CheckBox" parent="."]
visible = false
offset_left = 56.0
offset_right = 116.0
offset_bottom = 34.0
minimum_size = Vector2( 64, 0 )
pressed = true
group = SubResource( 1 )
align = 1
icon_align = 1

[node name="BtnStart" type="CheckBox" parent="."]
offset_left = 56.0
offset_right = 80.0
offset_bottom = 34.0
group = SubResource( 1 )

[node name="BtnToEnd" type="CheckBox" parent="."]
offset_left = 84.0
offset_right = 108.0
offset_bottom = 34.0
group = SubResource( 1 )

[node name="TxtTime" type="SpinBox" parent="."]
offset_left = 112.0
offset_right = 232.0
offset_bottom = 34.0
minimum_size = Vector2( 120, 0 )
step = 0.1
align = 3
prefix = "Time:"

[node name="TxtStart" type="LineEdit" parent="."]
offset_left = 236.0
offset_right = 346.0
offset_bottom = 34.0
minimum_size = Vector2( 110, 0 )
text = "Start: 0"
editable = false

[node name="TxtEnd" type="LineEdit" parent="."]
offset_left = 350.0
offset_right = 460.0
offset_bottom = 34.0
minimum_size = Vector2( 110, 0 )
text = "End: 0"
editable = false

[node name="Timeline" type="HSlider" parent="."]
offset_left = 464.0
offset_right = 1650.0
offset_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 1
step = 0.1

[node name="TimeManager" type="Node3D" parent="."]
process_mode = 2
script = ExtResource( 2 )

[connection signal="pressed" from="BtnToStart" to="." method="_on_BtnToStart_pressed"]
[connection signal="pressed" from="BtnInverse" to="." method="_on_BtnInverse_pressed"]
[connection signal="pressed" from="BtnStop" to="." method="_on_BtnStop_pressed"]
[connection signal="pressed" from="BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="BtnToEnd" to="." method="_on_BtnToEnd_pressed"]
